# ubuntu-module-sound

./: CMakeLists.txt  README.md  build.sh  package.json
lib/: index.js
src/: plugin.cpp  plugin.h  reactsoundmanager.cpp  reactsoundmanager.h
